--- a/surveyor-web/package.json
+++ b/surveyor-web/package.json
@@ -25,6 +25,7 @@
     "@swimlane/ngx-charts": "^10.0.0",
     "angularfire2": "^5.1.0",
     "core-js": "^2.5.4",
+    "d3-shape": "^1.2.2",
     "firebase": "^5.5.8",
     "hammerjs": "^2.0.8",
     "moment": "^2.22.2",
