--- a/surveyor-web/package.json
+++ b/surveyor-web/package.json
@@ -29,6 +29,7 @@
     "firebase": "^5.5.8",
     "hammerjs": "^2.0.8",
     "moment": "^2.22.2",
+    "ngx-device-detector": "^1.3.4",
     "rxjs": "^6.3.3",
     "zone.js": "~0.8.26"
   },
